2004-03-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/local_lim.h: Add HOST_NAME_MAX.
	* sysdeps/unix/sysv/linux/alpha/bits/local_lim.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/local_lim.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/local_lim.h: Likewise.

2004-03-08  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/tls.h (TLS_DO_MODIFY_LDT_KERNEL_CHECK):
	dl_osversion is readonly.

2004-03-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/tls.h (INIT_SYSINFO): _dl_sysinfo is now in
	_rtlf_global_ro.
	* sysdeps/ia64/tls.h (INIT_SYSINFO): Likewise.

2004-02-20  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/ptlongjmp.c [SHARED]: Code only
	valid for SHARED case.  Correct spelling of __vmx_longjmp.

	* sysdeps/powerpc/pspinlock.c: Move from here.
	* sysdeps/powerpc/powerpc32/pspinlock.c: To here.
	* sysdeps/powerpc/powerpc64/pspinlock.c: New file.
	* sysdeps/powerpc/powerpc64/pt-machine.h: Define __compare_and_swap32
	and __compare_and_swap32_with_release_semantics.

2004-02-20  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (generated): Remove tst-stack1.mtrace and tst-stack1-mem.
	(tests): Remove $(objpfx)tst-stack1-mem.
	(tst-stack1-ENV): Remove.
	($(objpfx)tst-stack1-mem): Remove.

	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep-cancel.h
	(__syscall_error_handler2): Call CDISABLE.
	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep-cancel.h
	(__syscall_error_handler2): Call CDISABLE.

	* sysdeps/unix/sysv/linux/ia64/dl-sysdep.h (DL_ARGV_NOT_RELRO): Define.

2004-02-10  Steven Munroe  <sjmunroe@us.ibm.com>

	* Makefile (libpthread-routines): Add ptcleanup.
	* ptlongjmp.c: Removed.
	* ptcleanup.c: Copied __pthread_cleanup_upto to here. New file.
	* sysdeps/pthread/ptlongjmp.c: Copied longjmp to here. New file.
	* sysdeps/unix/sysv/linux/powerpc/Versions: New file.
	Version longjmp, siglongjmp for GLIBC_2.3.4.
	* sysdeps/unix/sysv/linux/powerpc/ptlongjmp.c: New File.
